--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,16 +2,28 @@
   font-family: Raleway;
   src:
     url(./Raleway-Regular.woff2) format('woff2'),
-    url(./Raleway-Regular.woff) format('woff');
-  font-weight: normal;
-  font-display: swap;
+    url(./Raleway-Regular.woff) format('woff'),
+    url(./Raleway-Regular.ttf) format('truetype');
+  font-weight: 400;
+  font-display: normal;
 }
 
 @font-face {
   font-family: Raleway;
   src:
-    url(./Raleway-Bold.woff2) format('woff2'),
-    url(./Raleway-Bold.woff) format('woff');
-  font-weight: bold;
-  font-display: swap;
+  url(./Raleway-Medium.woff2) format('woff2'),
+  url(./Raleway-Medium.woff) format('woff'),
+  url(./Raleway-Medium.ttf) format('truetype');
+  font-weight: 500;
+  font-display: normal;
+}
+ 
+@font-face {
+  font-family: Raleway;
+  src:
+  url(./Raleway-Bold.woff2) format('woff2'),
+  url(./Raleway-Bold.woff) format('woff'),
+  url(./Raleway-Bold.ttf) format('truetype');
+  font-weight: 700;
+  font-display: normal;
 }
