--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,11 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+/* common styles */
 
 body {
-  width: 1100px;
-  margin: 0 auto;
-  font-family: Raleway, sans-serif;
+  max-width: 100vw;
+  min-width: 1100px;
+  margin: 0;
+  color: #000;
+  background-color: #1e1e1e;
 }
 
 h1,
@@ -17,22 +15,130 @@ h4,
 h5,
 h6,
 p,
+a,
 ul,
 ol,
-li,
 blockquote {
   margin: 0;
   padding: 0;
+
+  font-family: Raleway, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+
+  list-style: none;
+  text-decoration: none;
 }
 
 a {
-  color: inherit;
+  color: #000;
 }
 
-img {
+.content-section {
+  box-sizing: border-box;
+  max-width: 1100px;
+  margin: auto;
+
+  background-color: #fff;
+}
+
+.display-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-style {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.overlay {
+  position: absolute;
   width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 1;
 }
 
-button {
-  font: inherit;
+/* HEADER: menu */
+
+.header__links-list {
+  list-style: circle;
+  gap: 33px;
+  padding-left: 10px;
+}
+
+.link__underline {
+  line-height: 24.3px;
+  border-bottom: 2px solid #000;
+}
+
+/* adress blocks */
+
+.address {
+  width: 100%;
+  max-width: 240px;
+}
+
+.adress__style {
+  width: 133px;
+}
+
+/* MAIN: lots */
+
+.lots__card-list-item {
+  position: relative;
+
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  position: relative;
+  height: 100%;
+  background-size: cover;
+}
+ 
+.card__title,
+.card__text {
+  position: absolute;
+  z-index: 1;
+}
+
+.card__title {
+  top: 48px;
+  left: 40px;
+  right: 40px;
+
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-transform: uppercase;
+
+  text-decoration: underline;
+  color: #fff;
+}
+
+.card__text {
+  left: 40px;
+  bottom: 48px;
+  right: 40px;
+
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+
+  color: #fff;
+}
+
+/* FOOTER */
+
+.footer__menu-list-item {
+  margin-top: -4px;
+}
+
+.footer__menu-list-item:first-child {
+  margin-top: -5px;
+  margin-bottom: 0px;
 }
