--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,331 @@
-/* место для вашего кода */
+/* HEADER */
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  grid-template-areas: "header__menu  header__logo header__address";
+  align-items: center;
+
+  height: 293px;
+}
+
+.header__menu {
+  grid-area: header__menu;
+  padding-bottom: 6px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  border: none;
+}
+
+.header__logo {
+  grid-area: header__logo;
+  display: grid;
+
+  width: 100%;
+  padding-left: 2px;
+  margin-top: -4px;
+}
+
+.header__address {
+  grid-area: header__address;
+
+  justify-self: end;
+
+  padding-right: 50px;
+  padding-bottom: 5px;
+}
+
+/* MAIN: COVER */
+
+/* How can we do cover by grid? */
+
+.cover {
+  position: relative;
+
+  width: 100%;
+  height: 757px;
+
+  color: #fff;
+  background-image: url(/images/bg.png);
+
+  z-index: 1;
+}
+
+.cover__title {
+  margin-top: 180px;
+
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 1.15;
+
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+
+  margin-left: 49px;
+  margin-top: -15px;
+
+  text-align: start;
+}
+
+.aligned-text_center {
+  display: block;
+
+  margin-top: 20px;
+  margin-left: 28px;
+
+  text-align: center;
+}
+
+.aligned-text_right {
+  display: block;
+
+  padding-right: 21px;
+  margin-top: 20px;
+
+  text-align: end;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-around;
+
+  height: 51px;
+  margin-top: 105px;
+}
+
+.cover__description-text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 637px;
+  padding-top: 3px;
+
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28;
+  text-transform: uppercase;
+}
+
+.cover__description-text__whitespace-right {
+  margin-left: -2px;
+  word-spacing: 0.9em;
+}
+
+.cover__description-text__b {
+  margin-left: -2px;
+  letter-spacing: 110%;
+}
+
+.cover__description-text__whitespace-left {
+  margin-left: 0px;
+  word-spacing: 0.8em;
+}
+
+.cover__description-text__after-whitespace {
+  margin-right: 3px;
+  word-spacing: 0.8em;
+}
+
+.bet-button {
+  width: 256px;
+
+  margin-left: 1px;
+  margin-top: 1px;
+
+  border: 2px solid #fff;
+  font-size: 22px;
+  font-weight: 500;
+  color: #fff;
+  text-transform: uppercase;
+
+  background: transparent;
+}
+ 
+/* MAIN: LOTS */
+
+.lots {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 47px 1fr 25px;
+  grid-template-areas:
+    "lots__heading . ."
+    "lots__card-list lots__card-list lots__card-list"
+    "lots__look-more-link . .";
+
+  width: 1052px;
+  height: 723px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 180px;
+}
+
+.lots__heading {
+  grid-area: lots__heading;
+
+  width: 100%;
+  margin-left: 39px;
+  margin-top: 1px;
+
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  grid-area: lots__card-list;
+
+  display: flex;
+  justify-content: space-between;
+  column-gap: 25px;
+
+  height: 596px;
+}
+
+.card_type_film {
+  background-image: url("/images/lot_1.png");
+}
+
+.card_type_book {
+  background-image: url("/images/lot_2.png");
+}
+
+.card_type_picture {
+  background-image: url("/images/lot_3.png");
+}
+
+.lots__look-more-link {
+  grid-area: lots__look-more-link;
+  width: 192px;
+
+  margin-left: 39px;
+  margin-top: 5px;
+
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
+  border-bottom: 2px solid #000;
+  color: #000;
+}
+
+/* MAIN: ABOUT */
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: 1fr 2fr;
+  grid-template-areas:
+    "about__logo about__title"
+    ". about__text";
+  margin-top: 120px;
+  height: 595px;
+}
+
+.about__logo {
+  grid-area: about__logo;
+  height: 240px;
+  width: 240px;
+  border-radius: 50%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 70px;
+  margin-top: 35px;
+}
+
+.about__title {
+  grid-area: about__title;
+  margin-top: 137px;
+  margin-left: 48px;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.about__text {
+  grid-area: about__text;
+
+  margin-left: 48px;
+
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.about__text-first-p {
+  width: 688px;
+  margin-top: 8px;
+}
+
+.about__text-second-p {
+  width: 690px;
+  margin-top: 23px;
+}
+
+/* FOOTER */
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: "footer__address footer__menu socials";
+  align-items: center;
+
+  position: relative;
+
+  width: 1100px;
+  height: 360px;
+  padding-top: 180px;
+  padding-bottom: 81px;
+}
+
+.footer__address {
+  grid-area: footer__address;
+
+  position: absolute;
+
+  top: 0;
+  left: 49px;
+  line-height: 24px;
+}
+
+.footer__menu {
+  grid-area: footer__menu;
+
+  margin-bottom: 27px;
+
+  font-size: 18px;
+  font-weight: 400;
+
+  text-align: center;
+}
+
+.footer__menu-link-active {
+  line-height: 21px;
+}
+
+.footer__menu-link {
+  line-height: 21.13px;
+}
+
+.socials {
+  grid-area: socials;
+}
+
+.footer__social-list {
+  position: absolute;
+  top: 181px;
+  right: 75px;
+
+  width: 240px;
+  gap: 48px;
+}
