--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,10 @@
 /* common styles */
 
 body {
-  max-width: 100vw;
-  min-width: 1100px;
-  margin: 0;
+  max-width: 1100px;
+  margin: 0 auto;
   color: #000;
-  background-color: #1e1e1e;
+  background-color: #fff;
 }
 
 h1,
@@ -36,7 +35,6 @@ a {
 
 .content-section {
   box-sizing: border-box;
-  max-width: 1100px;
   margin: auto;
 
   background-color: #fff;
@@ -57,7 +55,8 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 1;
 }
 
@@ -87,30 +86,36 @@ a {
 
 /* MAIN: lots */
 
+.card-link {
+  height: 100%;
+}
+
 .lots__card-list-item {
   position: relative;
+  display: flex;
 
-  width: 100%;
   height: 100%;
 }
 
 .card {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+
   height: 100%;
+  padding: 48px 40px;
+
   background-size: cover;
+  box-sizing: border-box;
 }
- 
+
 .card__title,
 .card__text {
-  position: absolute;
   z-index: 1;
 }
 
 .card__title {
-  top: 48px;
-  left: 40px;
-  right: 40px;
-
   font-size: 22px;
   font-weight: 700;
   line-height: 26.4px;
@@ -121,9 +126,7 @@ a {
 }
 
 .card__text {
-  left: 40px;
-  bottom: 48px;
-  right: 40px;
+  margin-top: auto;
 
   font-size: 20px;
   font-weight: 400;
@@ -135,10 +138,9 @@ a {
 /* FOOTER */
 
 .footer__menu-list-item {
-  margin-top: -4px;
+  margin-top: -2px;
 }
 
 .footer__menu-list-item:first-child {
-  margin-top: -5px;
-  margin-bottom: 0px;
+  padding-top: 0;
 }
