--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,15 @@
-/* DER */
+/* COMMON */
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+}
+
+/* HEADER */
 
 .header {
   display: grid;
@@ -13,6 +24,26 @@
   grid-area: header__menu;
 
   padding: 0 0 1px 3px;
+}
+
+.header__links-list {
+  list-style: circle;
+  gap: 33px;
+  padding-left: 10px;
+}
+
+.link__underline {
+  line-height: 24.3px;
+  border-bottom: 2px solid #000;
+}
+
+.address {
+  width: 100%;
+  max-width: 240px;
+}
+
+.adress__style {
+  width: 133px;
 }
 
 .header__links-list-item_no-bullit {
@@ -145,6 +176,55 @@
   padding-bottom: 28px;
 }
 
+.card-link {
+  height: 100%;
+}
+
+.lots__card-list-item {
+  position: relative;
+  display: flex;
+
+  height: 100%;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+
+  height: 100%;
+  padding: 48px 40px;
+
+  background-size: cover;
+  box-sizing: border-box;
+}
+
+.card__title,
+.card__text {
+  z-index: 1;
+}
+
+.card__title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-transform: uppercase;
+
+  text-decoration: underline;
+  color: #fff;
+}
+
+.card__text {
+  margin-top: auto;
+
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+
+  color: #fff;
+}
+
 .card_type_film {
   background-image: url("/images/lot_1.png");
 }
@@ -259,6 +339,14 @@
   width: 240px;
   margin: 0 50px 0 auto;
   gap: 48px;
+}
+
+.footer__menu-list-item {
+  margin-top: -2px;
+}
+
+.footer__menu-list-item:first-child {
+  padding-top: 0;
 }
 
 .footer__social-icon {
