--- a/styles/style.css
+++ b/styles/style.css
@@ -307,7 +307,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: start;
-  padding-bottom: 45px;
+  /* padding-bottom: 45px; */
 }
 
 .footer__address {
