--- a/styles/style.css
+++ b/styles/style.css
@@ -249,26 +249,24 @@
 
 .about {
   display: grid;
-  grid-template-columns: 334px 1fr;
-  grid-template-rows: 1fr 2fr;
-  grid-template-areas:
-    "about__logo about__title"
-    ". about__text";
+
   padding-top: 120px;
-  margin-bottom: -50px;
+  padding-bottom: 181px;
+  column-gap: 72px;
 }
 
 .about__logo {
-  grid-area: about__logo;
-  height: 240px;
-  width: 240px;
-  border-radius: 50%;
-  background-color: #000;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  height: 240px;
+  width: 240px;
   margin-left: 70px;
   margin-top: 35px;
+
+  border-radius: 50%;
+  background-color: #000;
 }
 
 .about__logo-image {
@@ -277,9 +275,7 @@
 }
 
 .about__title {
-  grid-area: about__title;
-  margin-top: 137px;
-  margin-left: 48px;
+  padding-top: 137px;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -287,11 +283,8 @@
 
 .about__text {
   grid-area: about__text;
-
-  margin-left: 48px;
-  margin-top: 8px;
+  padding-top: 8px;
   padding-right: 28px;
-
   font-size: 20px;
   font-weight: 400;
   line-height: 24px;
@@ -306,17 +299,14 @@
 .footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+
   align-items: start;
-  /* padding-bottom: 45px; */
 }
 
 .footer__address {
   display: flex;
   flex-direction: column;
-
-  padding-top: 0;
   padding-left: 50px;
-
   line-height: 24px;
 }
 
@@ -335,7 +325,6 @@
 
 .footer__social-list {
   display: flex;
-
   width: 240px;
   margin: 0 50px 0 auto;
   gap: 48px;
