--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,7 @@
   display: flex;
 
   height: 100%;
+  min-height: 596px;
 }
 
 .card {
@@ -317,6 +318,8 @@
 }
 
 .footer__menu-link-active {
+  border: none;
+  text-decoration: none;
   line-height: 21px;
 }
 
